# malaigue-from-space

./: .gitignore  README.md  RUN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: decisions.md  eurosat.md  evaluation.md
docs/superpowers/plans/: 2026-06-24-malaigue-from-space.md
docs/superpowers/specs/: 2026-06-24-malaigue-from-space-design.md
notebooks/: eurosat_keras.ipynb
outputs/: metrics.md
outputs/eurosat/: metrics.json
src/malaigue/: analyze.py  embed.py  geo.py  index.py  ingest.py  rephy.py  report.py  run.py  validate.py
src/malaigue/eurosat/: __init__.py  data.py  eval.py  model.py  train_torch.py  viz.py
tests/: test_analyze.py  test_embed.py  test_eurosat.py  test_geo.py  test_index.py  test_ingest.py  test_rephy.py  test_report.py  test_smoke.py  test_validate.py
