[project]
name = "malaigue"
version = "0.1.0"
description = "Detecting the 2018 Thau lagoon malaigue from Sentinel-2 with a foundation model"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy",
  "pandas",
  "geopandas",
  "shapely",
  "rasterio",
  "rioxarray",
  "xarray",
  "odc-stac",
  "pystac-client",
  "planetary-computer",
  "scikit-learn",
  "matplotlib",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/malaigue"]
