[project]
name = "malaigue"
version = "0.1.0"
description = "Detecting the 2018 Thau lagoon malaigue from Sentinel-2 with a foundation model"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy",
  "pandas",
  "geopandas",
  "shapely",
  "rasterio",
  "rioxarray",
  "xarray",
  "odc-stac",
  "pystac-client",
  "planetary-computer",
  "scikit-learn",
  "scipy",
  "matplotlib",
  "torch",
  "torchvision",
  "huggingface_hub",
  "claymodel",
]

[dependency-groups]
dev = ["pytest"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
claymodel = { git = "https://github.com/Clay-foundation/model.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/malaigue"]
